# raspberry-github-runner

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  ansible.cfg  index.html  main.py  mkdocs.yml  pyproject.toml  site.yml  sitemap.xml
.github/workflows/: run-ansible.yml
docs/: how-to-guides.md  index.md
explanation/: index.html
group_vars/: all.yml
how-to-guides/: index.html
inventories/: raspberries.ini
reference/: index.html
roles/github_runner/tasks/: main.yml
roles/github_runner/tasks/registration/: main.yml  post_registration.yml  prepare_environment.yml  register_runner.yml  repository_tasks.yml
roles/github_runner/tasks/registration/service/: cleanup.yml  main.yml  setup.yml
roles/github_runner/tasks/setup/: install_dependencies.yml  install_docker.yml  install_github_runner.yml  install_oh_my_zsh.yml  main.yml
scripts/: get_github_repo_tokens.py
search/: search_index.json
tests/scripts/: test_get_github_repo_tokens.py
tutorials/: index.html
