[project]
name = "raspberry-github-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = "."

dependencies = []

[dependency-groups]
dev = [
    "ansible-lint>=6.8.7",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
]

[tool.ansible-lint]
warn_list = ["experimental"]
skip_list = ["role-name", "no-changed-when"]
